added refinements, added postman collection